// {"sysl": {"namespace": "Name :: Space"}}

// File generated by Sysl. DO NOT EDIT.

syntax = "proto3";

package Foo;

option go_package = "Foo";

message Request {
  float64 decimal_with_precision = 1;
  string nativeTypeField = 2;
  int32 numbered = 42;
  string optional = 4;
  string primaryKey = 5;
  Type reference = 6;
  repeated string sequence = 7;
  repeated string set = 8;
  string string_max_constraint = 9;
  string string_range_constraint = 10;
  string with_anno = 11;
}

message Type {
  int32 foo = 1;
}
